--- a/ocr_with_vlm.ipynb
+++ b/ocr_with_vlm.ipynb
@@ -28,6 +28,7 @@
     "from evaluate import load\n",
     "\n",
     "import os\n",
+    "import csv\n",
     "import lmstudio as lms"
    ]
   },
@@ -181,7 +182,7 @@
       "--------------------------------------------------------------------------------\n",
       "sample18.jpg → GT: L1952VG, Pred: 1952VG, CER: 0.143\n",
       "--------------------------------------------------------------------------------\n",
-      "sample19.jpg → GT: W1714W0, Pred: W1714WO, CER: 0.143\n",
+      "sample19.jpg → GT: W1714W0, Pred: W1714W0, CER: 0.000\n",
       "--------------------------------------------------------------------------------\n",
       "sample2.jpg → GT: N1077AAK, Pred: N1077AAK, CER: 0.000\n",
       "--------------------------------------------------------------------------------\n",
@@ -205,6 +206,8 @@
     }
    ],
    "source": [
+    "results = []\n",
+    "\n",
     "for gambar in gambar_files:\n",
     "    nama = os.path.splitext(gambar)[0]\n",
     "    image_path = os.path.join(image_folder, gambar)\n",
@@ -230,6 +233,7 @@
     "    cer_score = calculate_cer([prediction], [ground_truth])\n",
     "\n",
     "    ws.append([gambar, ground_truth, prediction, round(cer_score, 3)])\n",
+    "    results.append([gambar, ground_truth, prediction, round(cer_score, 3)])\n",
     "    print(f\"{gambar} → GT: {ground_truth}, Pred: {prediction}, CER: {cer_score:.3f}\")\n",
     "    print(\"-\" * 80)"
    ]
@@ -259,6 +263,32 @@
    "source": [
     "wb.save(output_excel)\n",
     "print(f\"Results saved to: {output_excel}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "78bfd33b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results saved to: result/prediction.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "output_csv = \"result/prediction.csv\"\n",
+    "os.makedirs(os.path.dirname(output_csv), exist_ok=True)\n",
+    "\n",
+    "with open(output_csv, mode='w', newline='', encoding='utf-8') as csvfile:\n",
+    "    writer = csv.writer(csvfile)\n",
+    "    writer.writerow([\"image\", \"ground_truth\", \"prediction\", \"CER_score\"])\n",
+    "    writer.writerows(results)\n",
+    "\n",
+    "print(f\"Results saved to: {output_csv}\")\n"
    ]
   }
  ],
